# specflow-agent

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/cases/: 01-authentication-flow.json  02-order-lifecycle.json  03-catalog-search.json  04-cache-ownership.json  05-add-coupon.json  06-add-role-check.json  07-add-product-search.json  08-order-timeout.json  09-login-rate-limit-risk.json  10-cache-consistency-risk.json  11-order-race-risk.json  12-api-contract-risk.json
docs/: 00-SPEC-BASELINE.md
docs/demo/: demo-script.md  (+2 more)
scripts/: check_secrets.py
tests/: test_agent_adapter.py  test_agent_executor.py  test_agent_implementations.py  test_agent_models.py  test_agent_payloads.py  test_agent_registry.py  test_agent_trace.py  test_analyze_worker.py  test_api_runs.py  test_artifact_store.py  test_benchmark.py  test_cli.py  test_cli_multi_agent.py  test_context.py  test_context_builder.py  test_coordinator.py  test_effective_plan.py  test_evaluation.py  test_evaluation_multi_agent.py  test_evidence_collector.py  test_execution_policy.py  test_fallback.py  test_generate_worker.py  test_handoff_models.py  test_handoff_validator.py  test_health.py  test_live_validation_import.py  test_llm.py  test_m4_agent_workflow.py  test_multi_agent_state_machine.py  test_openai_compatible_provider.py  test_plan_hash.py  test_plan_validator.py  test_projects.py  test_prompts.py  test_release_metadata.py  test_repository_agent_integration.py  test_repository_tools.py  test_review_worker.py  test_revision_controller.py  (+13 more)
(+290 files in other folders)
