[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "specflow-agent"
version = "1.1.0"
description = "A spec-driven development assistant for Python/FastAPI projects."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "jinja2>=3.1,<4",
  "pyyaml>=6.0,<7",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.30,<1",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.8,<1",
]

[project.scripts]
specflow = "specflow.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/specflow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
